--- a/styles.css
+++ b/styles.css
@@ -5,21 +5,22 @@
     --height: 2rem;
 }
 
-*{
-    margin: 10;
-    padding: 0;
+*, html{
+    margin: 0px;
+    padding: 0px;
 }
 
 .container{
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: repeat(3, 1fr);
     gap: 4px;
-    margin: 5px;
+    margin: 0px;
+    /* height: 100vh; */
 }
 
-.header{
+.main{
     grid-column: 2/3;
+    grid-row: 1/2;
     display: grid;
     grid-template-rows: repeat(2, 1fr);
 }
@@ -29,9 +30,13 @@
     justify-content: center;
     align-items: center;
     grid-column: 1/2;
-    grid-row: 1/4;
-    grid-template-rows: repeat(6, 1fr);
-    margin: 1em;
+    grid-row: 1/3;
+    /* grid-template-rows: repeat(6, 1fr); */
+    padding: 30px;
+    background-color: #1e293b;
+    color: #F9FAFB;
+    font-size: 1.1em;
+    width: 15vw;
 }
 
 .logo{
@@ -42,24 +47,61 @@
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
-    width: 100px;
-    height: 100px;
+    width: 140px;
+    height: 140px;
     border-radius: 50%;
+    border-style: solid;
 }
 
 .picture{
     display: flex;
     justify-content: center;
+    padding-bottom: 20px;
+    /* border-bottom: 3px solid #d9d9d9; */
 }
 
 .side-content{
-    display: grid;
-    justify-content: center;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+    padding-bottom: 35px;
+    padding-left: 20px;
+    /* padding-left: 25px; */
+    gap: 5px;
+}
+
+.list-item{
+    display: flex;
+    flex-flow: nowrap;
+    width: 90%;
+    padding: 5px;
+}
+
+.first{
+  padding-top: 20px;
+}
+
+.list-item a{
+    text-decoration: none;
+    color: inherit;
+}
+
+.list-item:hover{
+    cursor: pointer;
+    background-color: #36455f;
+    border-radius: 5px;
+}
+
+.project{
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 5px;
 }
 
 .top{
     display: inline-grid;
-    /* grid-template-columns: repeat(2, 1fr); */
     gap: 20px;
     justify-content: right;
     align-items: center;
