--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 :root{
     --rad: .7rem;
     --color-dark: #2f2f2f;
-    --color-light: #fff;
+    --color-light: rgb(255, 255, 255);
     --height: 2rem;
 }
 
 *, html{
     margin: 0px;
     padding: 0px;
+    
 }
 
 .container{
@@ -15,7 +16,7 @@
     grid-template-columns: 1fr 4fr;
     gap: 4px;
     margin: 0px;
-    /* height: 100vh; */
+    height: 100vh;
 }
 
 .main{
@@ -63,18 +64,33 @@
 .side-content{
     display: flex;
     flex-flow: column nowrap;
+    justify-content: center;
     align-items: flex-start;
     padding-bottom: 35px;
     padding-left: 20px;
-    /* padding-left: 25px; */
     gap: 5px;
 }
 
 .list-item{
-    display: flex;
-    flex-flow: nowrap;
-    width: 90%;
-    padding: 5px;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  flex-flow: nowrap;
+  width: 90%;
+  padding: 5px;
+  gap: 4px;
+}
+
+.image{
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  grid-column: 1/2;
+}
+
+.link{
+  display: flex;
+  justify-content: flex-start;
+  grid-column: 2/3;
 }
 
 .first{
@@ -92,14 +108,6 @@
     border-radius: 5px;
 }
 
-.project{
-  display: flex;
-  flex-flow: row;
-  justify-content: center;
-  align-items: flex-end;
-  gap: 5px;
-}
-
 .top{
     display: inline-grid;
     gap: 20px;
@@ -108,13 +116,27 @@
     height: fit-content;
 }
 
+.bottom{
+  display: inline-grid;
+  gap: 10px;
+  padding-left: 15px;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .fa{
     padding: 8px;
     margin: 0;
 }
 
+.notification-button{
+  display: flex;
+  /* width: 20px; */
+  height: auto;
+}
+
 .fa:hover{
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .notifications{
@@ -123,6 +145,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    padding: 5px;
 }
 
 .profile-picture{
