--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     --color-dark: #2f2f2f;
     --color-light: rgb(255, 255, 255);
     --height: 2rem;
+    --font-family: 'Inter', sans-serif;
 }
 
 *, html{
@@ -26,18 +27,60 @@
     grid-template-rows: repeat(2, 1fr);
 }
 
+.top{
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
+    align-items: center;
+    height: fit-content;
+    grid-row: 1/2;
+}
+
+.notifications{
+  grid-row: 1/2;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 5px;
+}
+
+.bottom{
+  grid-row: 2/3;
+  display: flex;
+  flex-flow: column;
+  align-items: flex-start;
+  gap: 10px;
+  padding-left: 15px;
+}
+
+.main-content{
+  grid-row: 2/3;
+  display: grid;
+  grid-template-columns: repeat(2,minmax(0,1fr));
+  gap: 1.5rem;
+}
+
 .sidebar{
     display: grid;
     justify-content: center;
     align-items: center;
     grid-column: 1/2;
-    grid-row: 1/3;
-    /* grid-template-rows: repeat(6, 1fr); */
     padding: 30px;
     background-color: #1e293b;
     color: #F9FAFB;
     font-size: 1.1em;
     width: 15vw;
+}
+
+.sidebar::-webkit-scrollbar {
+  width: 5px;
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+  background-color: #d9d9d9;
+  border-radius: 20px;
 }
 
 .logo{
@@ -108,19 +151,17 @@
     border-radius: 5px;
 }
 
-.top{
-    display: inline-grid;
-    gap: 20px;
-    justify-content: right;
-    align-items: center;
-    height: fit-content;
+div h1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: var(--font-family);
 }
 
-.bottom{
-  display: inline-grid;
-  gap: 10px;
-  padding-left: 15px;
-  justify-content: flex-start;
+.headline{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  justify-content: center;
   align-items: center;
 }
 
@@ -139,13 +180,18 @@
   cursor: pointer;
 }
 
-.notifications{
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    padding: 5px;
+.pic{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.small-headline{
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 }
 
 .profile-picture{
