--- a/styles.css
+++ b/styles.css
@@ -18,22 +18,111 @@
     gap: 4px;
     margin: 0px;
     height: 100vh;
+    overflow: hidden;
 }
 
 .main{
     grid-column: 2/3;
     grid-row: 1/2;
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
+    display: flex;
+    flex-flow: column;
+    overflow: hidden;
+
+}
+
+.main-content{
+  display: grid;
+  grid-template-rows: 1fr 4fr;
+  /* gap: 1.5rem; */
+  /* padding: 5px; */
 }
 
 .top{
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    gap: 20px;
-    align-items: center;
-    height: fit-content;
-    grid-row: 1/2;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  gap: 20px;
+  align-items: center;
+  height: fit-content;
+  grid-row: 1/2;
+  padding-bottom: 20px;
+}
+
+.content{
+  display: grid;
+  grid-template-rows: 1fr 3fr;
+  border-radius: 1rem;
+  border: solid;
+  margin: 10px;
+}
+
+.content-top{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.small-r{
+  grid-row: 1/2;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 5px;
+  gap: 1.5rem;
+}
+
+.large-r{
+  grid-row: 2/3;
+  display: grid;
+  height: fit-content;
+  justify-content: center;
+}
+
+.graph{
+  display: flex;
+  flex-flow:column;
+  margin: 10px;
+  border: solid;
+  border-radius: 1rem;
+  margin: 10px;
+}
+
+.summary{
+  display: flex;
+  padding: 10px;
+}
+
+.graph-chart{
+  display: flex;
+}
+
+.jobs{
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 0px 10px 10px;
+}
+
+.number{
+  font-size: 3rem;
+}
+
+.job-1{
+  color: rgb(59 130 246);
+}
+
+.job-2{
+ color: rgb(239 68 68);
+}
+
+.job-3{
+ color: rgb(245 158 11);
+}
+
+.job-4{
+  color: rgb(34 197 94);
 }
 
 .notifications{
@@ -49,17 +138,10 @@
 .bottom{
   grid-row: 2/3;
   display: flex;
-  flex-flow: column;
+  flex-flow: row;
   align-items: flex-start;
   gap: 10px;
   padding-left: 15px;
-}
-
-.main-content{
-  grid-row: 2/3;
-  display: grid;
-  grid-template-columns: repeat(2,minmax(0,1fr));
-  gap: 1.5rem;
 }
 
 .sidebar{
@@ -198,8 +280,8 @@ div h1{
     background-image: url(./views/charlesdeluvio-Mv9hjnEUHR4-unsplash.jpg);
     background-size: cover;
     background-position: center;
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
 }
 
